fixing spacing on login page

--- a/css/style.css
+++ b/css/style.css
@@ -583,9 +583,9 @@ button:hover {
   margin: 0 auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
   text-align: left;
-  margin-top: 150px;
+  margin-top: 200px;
   font-size: 20px;
-  margin-bottom: 150px;
+  margin-bottom: 200px;
   flex-direction: column;
   align-items: stretch;
   font-family: "Platypi", serif;
